--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_XSSYZN.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_XSSYZN.cshtml
@@ -40,7 +40,7 @@
         <div class="div_body_nav_text">
             <table>
                 <tr>
-                    <td colspan="2" class="td_content">在首页右上角点击我的小镇，进入管理页面，查看信息管理,我的发布</td>
+                    <td colspan="2" class="td_content">在首页右上角点击个人中心，进入管理页面，查看信息管理,我的发布</td>
                 </tr>
             </table>
         </div>
@@ -48,7 +48,7 @@
         <div class="div_body_nav_text">
             <table>
                 <tr>
-                    <td colspan="2" class="td_content">在首页右上角点击我的小镇，进入管理页面，查看信息管理,我的发布，点击修改或删除按钮</td>
+                    <td colspan="2" class="td_content">在首页右上角点击个人中心，进入管理页面，查看信息管理,我的发布，点击修改或删除按钮</td>
                 </tr>
             </table>
         </div>
