--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_YHZCYDL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_YHZCYDL.cshtml
@@ -50,7 +50,7 @@
                     <td colspan="2" class="td_content">
                         1、用户注册后是不可以修改用户名的，用户名是您在信息小镇上的身份标识，是唯一并永久的，一旦注册成功，就无法再更改了。因此，在注册时请选择您喜欢并能牢记的用户名。信息小镇网推荐您使用中文的用户名。<br />
                         2、按以下操作即可修改密码：<br/>
-                        （1）进入我的小镇，账户管理，密码修改<br/>
+                        （1）进入个人中心，账户管理，密码修改<br/>
                         （2）输入旧密码以及新密码,点击确认<br/>
                     </td>
                 </tr>
@@ -60,7 +60,7 @@
         <div class="div_body_nav_text">
             <table>
                 <tr>
-                    <td colspan="2" class="td_content">进入我的小镇，账户管理，换绑手机，输入新的手机号，和验证码，点击换绑</td>
+                    <td colspan="2" class="td_content">进入个人中心，账户管理，换绑手机，输入新的手机号，和验证码，点击换绑</td>
                 </tr>
             </table>
         </div>
