--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_YHSYXY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_YHSYXY.cshtml
@@ -116,7 +116,7 @@
             </span>
         </div>
     </div>
-    @*<div class="div_bottom">
+    <div class="div_bottom">
         <div class="div_bottom_inner">
             <span class="span_div_bottom_inner">关于信息小镇</span>
             <em class="em_div_bottom_inner"></em>
@@ -131,6 +131,7 @@
             <em class="em_div_bottom_inner"></em>
             <span class="span_div_bottom_inner">Copyright&nbsp;©&nbsp;&nbsp;www.infotownlet.com</span>
         </div>
-    </div>*@
+    </div>
+    <div class="div_rtop" id="div_rtop" onclick="GoToTop()"></div>
 </body>
 </html>
