--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/SY.cshtml
@@ -40,7 +40,7 @@
             </span>
             <span class="span_top_right_split"></span>
             <span id="span_grzx" class="span_top_right">
-                我的小镇
+                个人中心
             </span>
             <span class="span_top_right_split"></span>
             <span id="span_bzzx" class="span_top_right">
