--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_YHSYXY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_YHSYXY.css
@@ -56,7 +56,7 @@
 
 .span_body_nav_img {float: left;margin-top: 5px;}
 
-.span_body_nav_text_title {font-weight: bold;display: block;width: 100%;height: 60px;padding-top: 10px;text-align: left;}
+.span_body_nav_text_title {font-weight: bold;display: block;width: 100%;height: auto;padding-top: 10px;text-align: left;}
 
 .div_bottom {border-top: 1px solid #cccccc;display: block;text-align: center;height: 100px;color: #333;padding-top: 15px;font-family: Microsoft YaHei, SimHei, Arial, Helvetica, sans-serif;margin-top: 20px;background-color: #000;opacity: 0.5;color: #fff;line-height: 34px;}
 
