--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_YHSYXY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_YHSYXY.cshtml
@@ -18,7 +18,7 @@
     <div class="div_body">
         <div class="div_body_nav_title" id="div_body_nav_title_1">信息小镇用户使用协议</div>
         <div class="div_body_nav_text">
-            <span class="span_body_nav_text_title">&nbsp;&nbsp;&nbsp;&nbsp;您好，信息小镇是福建天问信息技术有限公司旗下的网站，为注册成为信息小镇的用户并使用信息小镇提供的服务，您应该仔细阅读并同意《信息小镇用户使用协议》。</span>
+            <span class="span_body_nav_text_title">&nbsp;&nbsp;&nbsp;&nbsp;您好，信息小镇是福建沐晗信息技术有限公司旗下的网站，为注册成为信息小镇的用户并使用信息小镇提供的服务，您应该仔细阅读并同意《信息小镇用户使用协议》。</span>
             <span class="span_body_nav_text_title">一、关于协议</span>
             <span class="span_body_nav_text_title">
                 1、本协议是信息小镇与用户之间的法律协议，请您在注册之前，务必谨慎阅读并充分理解其中的条款。当您点击已阅读并同意《信息小镇用户使用协议》，注册成为信息小镇的用户并使用信息小镇提供的服务，即表示您自愿接受本协议，认可本协议全部条款内容,并自觉遵守协议的内容。<br />
