--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ESSY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/ESSY.cshtml
@@ -216,7 +216,7 @@
         </div>
     </div>
     <div class="div_bottom">
-        <p class="p_div_bottom">©2017 福建天问信息技术有限公司 客服电话：400-036-3432 | 021-6430110（周一至周日，9:00-18:00）</p>
+        <p class="p_div_bottom">©2017 福建沐晗信息技术有限公司 客服电话：400-036-3432 | 021-6430110（周一至周日，9:00-18:00）</p>
         <p class="p_div_bottom reduce">闽ICP备06019413号 | 闽ICP证B2-20080088 | 闽公网安备31010402000116号</p>
     </div>
 }
