--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_CZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDXJ/WDXJ_CZ.cshtml
@@ -70,7 +70,7 @@
                     <img class="img_main_info_body_yhhk_yhk" src="@Url.Content("~/Areas/Business/Css/images/WDZJ/wdxj_cz_yhhk_jsyh.png")"/>
                     <em class="em_main_info_body_yhhk_yhk"></em>
                     <span class="span_main_info_body_yhhk_yhk_hh">6217&nbsp;&nbsp;0018&nbsp;&nbsp;2001&nbsp;&nbsp;1722&nbsp;&nbsp;869</span>
-                    <span class="span_main_info_body_yhhk_yhk_gs">户&nbsp;&nbsp;头：福建天问信息技术有限公司</span>
+                    <span class="span_main_info_body_yhhk_yhk_gs">户&nbsp;&nbsp;头：福建沐晗信息技术有限公司</span>
                     <span class="span_main_info_body_yhhk_yhk_gs">开户行：建设银行古田路支行</span>
                 </div>
             </div>
