--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/FBCG.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/FBCG.css
@@ -2,7 +2,7 @@
 
 .fbcg_left {padding: 20px 100px 20px 50px;width: 450px;float: left;display: inline-block;}
 
-.fbcg_tip {text-align: center;font-size: 26px;font-family: "华文细黑";text-indent: 16px;margin-top: 15px;width: 450px;}
+.fbcg_tip {text-align: center;font-size: 26px;font-family: "华文细黑";text-indent: 16px;margin-top: 15px;width: 450px;color: #090;}
 
 .fbcg_tip_img {margin-left: -12px;width: 38px;height: 38px;background: url(../images/ok.png);}
 
