--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FBCG/FBCG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FBCG/FBCG.cshtml
@@ -47,7 +47,7 @@
                         <a class="btn btn-info fbcg_btn" id="btnZFXX"><span>再发一条</span></a>
                     </div>
                     <div class="fbcg_tg">
-                        使用在线推广，快速提升浏览量，助您快速成交！ <a class="fbcg_info_navigation">了解详情</a>
+                        @*使用在线推广，快速提升浏览量，助您快速成交！ <a class="fbcg_info_navigation">了解详情</a>*@
                     </div>
                 </div>
                 <div class="fbcg_right">
