--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/FBCG.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/FBCG.css
@@ -1,4 +1,4 @@
-﻿.fbcg_warning {background: #f4d6ec;border: 1px solid #bc6ba6;padding: 0 15px;padding-top: 4px;color: #000;width: 450px;height: 34px;font: 400 12px/190% Hiragino Sans GB, 微软雅黑, Microsoft YaHei, SimHei, Tahoma, 宋体, SimSun, sansserif;}
+﻿.fbcg_warning {background: #f4d6ec;border: 1px solid #bc6ba6;padding: 0 15px;padding-top: 2px;color: #000;width: 450px;height: 34px;font: 400 14px/190% Hiragino Sans GB, 微软雅黑, Microsoft YaHei, SimHei, Tahoma, 宋体, SimSun, sansserif;}
 
 .fbcg_left {padding: 20px 100px 20px 50px;width: 450px;float: left;display: inline-block;}
 
@@ -6,13 +6,15 @@
 
 .fbcg_tip_img {margin-left: -12px;width: 38px;height: 38px;background: url(../images/ok.png);}
 
-.fbcg_info {width: 450px;color: #bbb;margin-top: 10px;font-size: 14px;line-height: 25px;}
+.fbcg_info {width: 450px;color: #bbb;margin-top: 10px;font-size: 16px;line-height: 30px;}
 
-.fbcg_info_navigation {color: #5a7de9;font-size: 14px;cursor: pointer;}
+.fbcg_info_navigation {color: #5a7de9;font-size: 16px;cursor: pointer;}
 
-.fbcg_main {width: 450px;height: 50px;margin-top: 20px;text-align: left;}
+.fbcg_main {width: 450px;height: 50px;margin-top: 30px;text-align: left;}
 
-.fbcg_btn {width: 102px;height: 35px;float: left;margin-right: 10px;}
+.fbcg_btn {width: 102px;height: 35px;float: left;margin-right: 10px;background: #bc6ba6;}
+
+.fbcg_btn:hover{background: #ad5b97;}
 
 .fbcg_right {padding: 20px 100px 20px 80px;width: 380px;float: right;display: inline-block;margin-top: 50px;margin-left: 10px;}
 
