--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FBCG/FBCG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FBCG/FBCG.cshtml
@@ -98,19 +98,20 @@
                 </div>
                 <div class="div_main_info" id="div_main_info">
                     <div class="div_main_info_body" id="div_main_info_body_dsfptzf" style="display: block;">
-                        <div class="div_main_info_zffs_dsfptzf" id="div_main_info_zffs_wxzf" style="border: 1px solid rgb(188, 107, 166); border-image: none;">
+                        <div class="div_main_info_zffs_dsfptzf" id="div_main_info_zffs_zfbzf">
+                            <img class="img_radio" id="img_radio_zfbzf" src="http://localhost/infotownlet/Areas/Business/Css/images/radio_gray.png">
+                            <img class="img_zffs" id="img_zffs_zfbzf" src="http://localhost/infotownlet/Areas/Business/Css/images/WDZJ/wdxj_cz_zfbzf.png">
+                            <span class="img_select" id="img_select_zfbzf"></span>
+                        </div>
+                        <div class="div_main_info_zffs_dsfptzf" id="div_main_info_zffs_wxzf" style="display: block;">
                             <img class="img_radio" id="img_radio_wxzf" src="http://localhost/infotownlet/Areas/Business/Css/images/radio_blue.png">
                             <img class="img_zffs" id="img_zffs_wxzf" src="http://localhost/infotownlet/Areas/Business/Css/images/WDZJ/wdxj_cz_wxzf.png">
                             <span class="img_select" id="img_select_wxzf" style='background-image: url("http://localhost/infotownlet/Areas/Business/Css/images/WDZJ/wdxj_cz_zffs_select.png");'></span>
                         </div>
-                        <div class="div_main_info_zffs_dsfptzf" id="div_main_info_zffs_zfbzf">
-                            <img class="img_radio" id="img_radio_zfbzf" src="http://localhost/infotownlet/Areas/Business/Css/images/radio_gray.png"><img class="img_zffs" id="img_zffs_zfbzf" src="http://localhost/infotownlet/Areas/Business/Css/images/WDZJ/wdxj_cz_zfbzf.png">
-                            <span class="img_select" id="img_select_zfbzf"></span>
-                        </div>
                     </div>
                     <div id="div_bottom" style="display: block;">
                         <div class="div_main_info_body" style="height: 50px;">
-                            <input class="input_main_info_ljzf" id="input_main_info_ljzf" type="button" value="立即支付">
+                            <input class="input_main_info_ljzf" id="input_main_info_ljzf" type="button" value="立即置顶">
                         </div>
                         <div class="div_main_info_body">
                             <table>
