--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -67,6 +67,8 @@
                     <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_rhzjxy">如何增加信用</span>
                     <em class="em_left_box_bottom_right"></em>
                     <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xywsmhjs">信用为什么会减少</span>
+                    <em class="em_left_box_bottom_right"></em>
+                    <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_xjfwxy">信息小镇现金服务协议</span>
                 </td>
             </tr>
             <tr class="tr_left_box_bottom">
