--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_ZHDJYXY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_ZHDJYXY.cshtml
@@ -24,6 +24,7 @@
             </div>
             <div class="div_body_nav_inner">
                 <span class="span_body_nav" id="4"><span class="span_body_nav_inner">4、信用为什么会减少 ?</span></span>
+                <span class="span_body_nav" id="5"><span class="span_body_nav_inner">5、信息小镇现金服务协议</span></span>
             </div>
         </div>
         <div class="div_body_nav_title" id="div_body_nav_title_1">1.什么是信用 ?</div>
@@ -233,6 +234,125 @@
                     </td>
                 </tr>
             </table>
+        </div>
+        <div class="div_body_nav_title" id="div_body_nav_title_5">5.信息小镇现金服务协议</div>
+        <div class="div_body_nav_text">
+            <div class="div_XJFWXYbody">
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;信息小镇现金服务协议（以下简称“本协议”）是信息小镇用户（以下亦称“用户”或“您”）与信息小镇之间的法律协议。本协议是用户登录信息小镇账号并充值支付以便购买使用信息小镇网络信息及推广服务时适用的通用条款。因此，请您在充值信息小镇现金前，仔细地阅读本协议的所有内容，您需要了解并同意以下条款所述事项才能完成充值支付、享受信息小镇网的现金服务（以下简称“信息小镇现金服务”）功能。如果您不同意本协议的约定，应立即停止使用信息小镇现金服务。无论您事实上是否认真阅读，只要您勾选同或点击确认本协议，或者实际接受了信息小镇现金服务，就表示您已接受了本协议及信息小镇网公布的信息小镇现金相关的服务协议和服务规则及信息小镇以站内公告、站内信、手机短信、用户后台或您填写的其他联系方式向您通知/送达的信息小镇相关规则、政策、通知（合称“信息小镇平台规则”）等信息，并愿意受其约束。如果发生纠纷，您不能以未仔细阅读为由进行抗辩。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;本协议是《信息小镇用户使用协议》的有效组成部分，本协议未涉及的事项依照《信息小镇用户使用协议》处理。信息小镇现金服务协议适用于您充值信息小镇现金和使用信息小镇现金购买信息小镇平台产品服务的充值和款项结算。
+                </div>
+                <div class="div_body_text">
+                    一、充值支付及信息小镇现金服务使用约定
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;1、用户可根据本协议约定及信息小镇现金服务规则提示，选择不同的信息小镇充值渠道进行信息小镇现金充值。信息小镇现金充值操作规则URL：http://about.infotownlet.com/325.html。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;2、信息小镇网不提供用户之间的信息小镇现金互转服务。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;3、用户使用信息小镇网的信息小镇现金服务以及后续推广服务属于自愿行为，用户明确同意不管以何种方式、充值渠道进行信息小镇现金充值后均不可要求退款，也不可兑换成现金，只能用于信息小镇网服务。特殊情况下，如充值的信息小镇现金经信息小镇同意后兑换成现金的，信息小镇网有权收取合理的手续费。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;4、信息小镇现金可以用于购买信息小镇所有自有产品。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;5、对于任何用户从非信息小镇网官方渠道获得的信息小镇现金，信息小镇均不予承认，并保持随时清零的权利。信息小镇网官方渠道指：
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;（1）用户在信息小镇官网上进行的在线充值；
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;（2）用户从信息小镇网站所有者和/其关联公司工作人员处购买，并能提供有效合同、发票等由信息小镇网站所有者和/其关联公司出具的合法购买凭证。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;6、信息小镇将在信息小镇网相关页面公布各充值类型的充值规则、使用规则、转换规则等，用户应随时查看，一旦公布即视为用户已知悉并需要遵守相关规则。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;7、为了保证用户使用信息小镇现金的便捷性和安全性，用户在使用网上银行的充值方式时，信息小镇网可能会随机提供不同的第三方支付平台完成充值，用户对此表示同意和接受。
+                </div>
+                <div class="div_body_text">
+                    二、用户的权利和义务
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;1、用户承诺拥有完全民事权利能力和民事行为能力签署并履行本协议，且签署并履行本协议不违反任何对其有约束力的适用法律的限制，也不会侵犯本协议以外任何第三方之合法权益；用户对其使用信息小镇服务账号充值支付、交易、发布信息所推广的产品/服务等行为具有完整、合法的权利；用户自身交易、经营活动合法、服务项目用途合法、所发布之信息内容不会损害信息小镇及关联公司的利益、商誉和品牌形象。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;2、用户承诺并保证：向信息小镇提供真实、合法、准确的信息，并根据实际情况的变化及时更新手机号码、电子邮件等联系信息，捆绑账户的手机号码和电子邮件发生变更、遗失等情况时，及时通知信息小镇并修改相关信息。否则，因此产生的不良后果由用户自己承担。因用户提供信息失实或违反以上规定的，信息小镇网有权终止提供信息小镇现金服务。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;3、用户应按照协议约定或信息小镇提示的规则和方式向信息小镇支付服务费用或向其账户中充值支付。当用户充值余额不足以支付推广服务费用时，用户应及时充值，如因用户没有及时充值而造成用户推广内容下线导致信息小镇推广服务终止的，信息小镇不承担任何责任。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;4、用户须根据本协议及各项规则的规定使用信息小镇现金服务，并按照国家法律法规（包括但不限于《广告法》、《互联网广告管理暂行办法》等）、本协议、信息小镇规则等规定编辑、发布、 修改、更新推广信息，并对所发布信息及基于信息与用户间达成交易的真实性、有效性、准确性、合法性（包括但不限于《消费者权益保护法》、《产品质量法》、 《广告法》等）、不侵犯第三方合法权利（包括但不限于知识产权、隐私权、肖像权等人身权利及或其他合法权利）独立承担全部法律责任。如用户推广内容、信息或页面中通过设置链接或跳转方式可链至用户自有网站，则用户承诺其自有网站经营及内容合法、有效。用户应积极妥善解决与信息小镇其他用户间开展交易过程中产生的全部争议、纠纷、索赔、仲裁、诉讼等。如因第三方（包括但不限于其他用户、权利人、国家监管机关或司法机关的通知、裁 决等）投诉举证用户信息/线下交易违法/违约且用户未能及时自证的，信息小镇有权冻结用户账号及至终止提供服务并要求用户承担违约责任。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;5、用户同意信息小镇通过信息小镇网（www.infotownlet.com）站内公告、站内信、手机短信、用户后台或用户填写的其他联系方式向用户发布产品规则、政策、通知等信息。用户同意信息小镇有权根据经营需要变更推广服务的具体形式和内容。信息小镇推广服务形式、内容发生变更前，信息小镇应通过站内公告、站内信、邮件、电话或短信、用户后台等方式(上述任一方式)通知用户。用户使用变更后的服务，视为用户接受变更。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;6、用户需对自己在使用信息小镇服务过程中的行为承担法律责任。若用户的行为违反上述承诺条款的，信息小镇网将有权作出独立判断采取相应措施，包括但不限于直接屏蔽、删除违法侵权信息、降低用户信用值，或直接停止提供服务、关闭信息小镇现金用户服务帐号，同时相应金额不予退还。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;7、对于您涉嫌违反承诺的行为对任意第三方造成损害的，您均应当以自己的名义独立承担所有的法律责任，并应确保信息小镇免于承担因此产生的损失或增加的费用。如您涉嫌违反有关法律或者本协议之规定，使信息小镇遭受任何损失，或受到任何第三方的索赔，或受到任何行政管理部门的处罚，您应当赔偿信息小镇因此造成的损失及（或）发生的费用，包括合理的律师费用。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;8、用户对信息小镇现金账户负有妥善保管的义务，因用户自身的不当行为，如用户对登陆密码保护不善，或将自己账户交由他人使用等情况造成信息小镇现金损失的，用户应当自行承担全部损失，因此所衍生的任何损失或损害，信息小镇无法也不承担任何责任。除非有法律规定或行政司法机关的指令，且征得信息小镇的同意，否则您的信息小镇服务账户、登录密码、支付密码（如有）和验证码不得以任何方式转让、借用、赠与或继承（与账户相关的财产权益除外）。否则，由此给您（或信息小镇、任何第三方）造成的一切损失，概由您自行承担（或者负责赔偿）。
+                </div>
+                <div class="div_body_text">
+                    三、信息小镇网的权利义务
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;1、信息小镇（www.infotownlet.com）的网络服务提供者（包括信息小镇网（www.infotownlet.com）的所有者及其关联服务提供方）将按照《信息小镇现金服务协议》和信息小镇现金操作规则为信息小镇平台用户提供本协议约定的信息小镇现金服务。信息小镇网站及用户后台发布的信息小镇现金服务相关的操作规则、帮助、名词解释等（本协议中统称“规则”）为本协议的有效组成部分。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;2、信息小镇网有权根据国家法律法规的更新、产品和服务规则的调整需要不时地制定、修改《信息小镇现金服务协议》及相关余额操作规则，并以网站公示的方式进行公示。如用户继续使用信息小镇平台信息小镇现金服务的，即表示您接受经修订的协议和规则。如发生有关争议时，以信息小镇最新的相关协议和规则为准。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;3、信息小镇如发现用户充值信息小镇现金后通过信息小镇提供的互联网信息服务空间发布信息及基于信息与用户间的交易有如下行为之一：推广信息含有任何违反国家有关法律、法规及中国承认或加入的国际条约的内容（包括但不限于危害国家安全、淫秽色情、虚假、违法、诽谤、恐吓或骚扰、侵犯他人知识产权、人身权或其他合法权益或利益以及有违公序良俗的内容或指向这些内容的链接）；推广商品和/或服务违反国家、行业的质量标准；假冒、欺诈等欺骗信息小镇网站其他用户权益的行为；采取任何违法或者作弊的行为以提高推广点击率或获取不正当交易机会；其他违反本协议及信息小镇平台相关规则的行为，则信息小镇有权直接删除信息、冻结用户服务账号、终止提供服务，并要求用户承担违约责任。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;4、对于您在信息小镇平台上实施的行为，包括您未在信息小镇平台上实施但已经对信息小镇平台及其用户产生影响的行为，信息小镇有权单方认定您行为的性质及是否构成对本协议和/或规则的违反，并据此采取相应的处理措施。您应自行保存与您行为有关的全部证据，并应对无法提供充要证据承担不利后果。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;5、当用户使用信息小镇现金充值购买使用信息小镇所提供的商业广告相关服务时，信息小镇有权按照《广告法》、《互联网广告管理暂行办法》相关规定要求用户提供发布广告所需的特殊证明文件，且信息小镇有权在发布前审核用户提供的推广物料（文字、图片、链接、页面等），对于不合法的推广物料信息小镇有权拒绝发布、要求用户修改直至符审合法律法规及信息小镇审核规则，用户知悉如因用户推广物料违反相关法律法规导致的未能发布/未能及时发布，信息小镇不承担违约责任。信息小镇的审核仅限于对用户所购买商业广告的推广物料的形式审核，甲方仍应对自身信息及所提供产品/服务的真实性、合法性、有效性、准确性承担广告监管部门项下的相关法律责任，信息小镇对此按照法律法规相关规定承担相应的责任。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;6、信息小镇将尽力维护信息小镇现金服务的安全性和方便性，保证信息小镇平台能够安全、平稳地正常运营，能为用户提供持续性的网络服务，并在合作推广过程中听取用户意见和建议。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;7、基于业务性调整或产品型调整（包括但不限于展现方式、推广政策等），信息小镇有权对信息小镇网站服务内容等有关方面进行必要的更正、更新、升级、改造。因信息小镇对服务内容进行必要的更正、更新、升级、改造，以及因网络中断、断电、黑客攻击、网络升级改造、中外政府禁令、中外政府限制、罢工、动乱等等原因，导致信息小镇服务的中断、中止、故障、毁损，用户同意不追究信息小镇的违约责任。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;8、信息小镇对由于政府行为譬如政策或法规的变更、自然灾害或战争、通讯线路中断、黑客攻击、计算机病毒侵入或发作、电信部门技术调整、因政府管制而造成网站的暂时性关闭等任何影响网络正常运营的不可抗力事件，以及他人蓄意破坏、正常的系统维护、系统升级，或者因网络拥塞而导致本网站不能访问而造成的本网站所提供的信息及数据的延误、停滞或错误，以及使用者由此受到的一切损失不承担任何责任。
+                </div>
+                <div class="div_body_text">
+                    四、损害赔偿
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;1 、用户违反法律法规、信息小镇平台规则及本协议任一条款约定的，信息小镇有权冻结用户在信息小镇的服务账号、终止为用户提供服务、扣除用户尚未消耗完毕的服务费用作为违约金并补偿信息小镇网络服务提供者由此所遭受的相关损失（包括第三方处罚/索赔/争议解决、用户已额外享有的增值服务成本等）。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;2、协议生效后，若用户单方解除协议，除应支付信息小镇实际损失外，还应另行向信息小镇一次性支付协议总金额的10%作为违约金。用户同意信息小镇可依据本协议从用户已充值的信息小镇现金账户中扣除相关损失及违约金。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;3 、在用户无违法违约行为的前提下，信息小镇未按照本协议约定为用户提供服务的，用户有权要求信息小镇以相应顺延服务时长、补足等额增值服务等方式之一补偿。但用户知悉并同意，本着权利义务对等之原则，当经由用户有明确证据证明信息小镇存在严重违约行为时信息小镇所应承担的违约金及赔偿上限不超过用户按本协议所支付信息小镇现金中尚未消耗完毕的款项扣除用户已额外享有的增值服务成本及信息小镇技术服务基础运营成本后的金额。
+                </div>
+                <div class="div_body_text">
+                    五、法律适用和争议解决
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;1 、本协议之订立、生效、解释、修订、补充、终止、执行和争议解决均适用中华人民共和国法律。如法律无相关规定的，则应参照通用国际商业惯例和（或）行业惯例。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;2 、如本协议条款与国家法律相抵触时，则这些条款将完全按法律规定重新解释，其他条款则依旧保持对双方产生法律效力和影响。
+                </div>
+                <div class="div_body_text">
+                    &nbsp;&nbsp;&nbsp;&nbsp;3 、因本协议产生之争议、纠纷，应由信息小镇与您友好协商；协商不成的，应依照中华人民共和国法律予以处理，并以福建省福州市鼓楼区人民法院为第一审管辖法院；按照中华人民共和国法律，因级别管辖的规定，福建省福州市鼓楼区人民法院无权管辖的，以其上级法院作为第一审管辖法院。
+                </div>
+            </div>
         </div>
     </div>
     <div class="div_bottom">
