--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/QT.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/QT.cshtml
@@ -4,8 +4,10 @@
 @section Section_Head {
     <link href=@Url.Content("~/Areas/Business/Scripts/bootstrap-3.3.7/css/bootstrap.min.css") rel="stylesheet" />
     <link href=@Url.Content("~/Areas/Business/Css/Common/PageCommon.css") rel="stylesheet" />
+    <link href=@Url.Content("~/Areas/Business/Scripts/xcConfirm/css/xcConfirm.css") rel="stylesheet" />
     <script src=@Url.Content("~/Areas/Business/Scripts/bootstrap-3.3.7/js/bootstrap.min.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/underscore.min.js")></script>
+    <script src=@Url.Content("~/Areas/Business/Scripts/xcConfirm/js/xcConfirm.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/Common.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/Regular.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/PageJson.js")></script>
