--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/XXXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/XXXX.cshtml
@@ -3,14 +3,16 @@
 }
 @section Section_Head {
     <link href=@Url.Content("~/Areas/Business/Scripts/bootstrap-3.3.7/css/bootstrap.min.css") rel="stylesheet" />
+    <script src=@Url.Content("~/Areas/Business/Scripts/bootstrap-3.3.7/js/bootstrap.min.js")></script>
+    <link href=@Url.Content("~/Areas/Business/Scripts/xcConfirm/css/xcConfirm.css") rel="stylesheet" />
+    <script src=@Url.Content("~/Areas/Business/Scripts/xcConfirm/js/xcConfirm.js")></script>
+    <script src=@Url.Content("~/Areas/Business/Scripts/underscore.min.js")></script>
     <link href=@Url.Content("~/Areas/Business/Css/Common/PageCommon.css") rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Css/Common/XXXX_Common.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Css/Common/Top.css" )" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Css/Common/XZQ.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Css/Common/Head.css")" rel="stylesheet" />
     <script src="http://api.map.baidu.com/api?v=2.0&ak=134db1b9cf1f1f2b4427210932b34dcb"></script>
-    <script src=@Url.Content("~/Areas/Business/Scripts/bootstrap-3.3.7/js/bootstrap.min.js")></script>
-    <script src=@Url.Content("~/Areas/Business/Scripts/underscore.min.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/Common.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/Regular.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/PageJson.js")></script>
