--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
 }
 @section Section_Body {
-<body>
+<body id="main_body">
     <div id="divTop" class="div_top">
         <div class="div_top_left">
             <span class="span_dqxzq" id="span_content_info_xzq">@ViewData["XZQ"]</span>
