--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/SY.cshtml
@@ -68,6 +68,24 @@
             <span class="span_fbxx" id="span_fbxx">免费发布信息</span>
         </div>
     </div>
+    <div id="divHideHead" class="div_head_hide">
+        <div class="div_head_hide_left">
+            <span class="img_head_hide_logo">信息小镇</span>
+        </div>
+        <div class="div_head_hide_right">
+            <div class="div_head_hide_right_ss">
+                <span id="spanHideXSLC" class="span_spaninput_out SRK">
+                    <input id="SSHide" class="span_spaninput_in" type="text" placeholder="搜索 房子/车子/工作/服务" />
+                    <input type="hidden" id="HideLBID" />
+                    <input type="hidden" id="HideURL" />
+                    <input type="hidden" id="HideCONDITION" />
+                    <span id="span_hide_ss" class="span_ss">搜索</span>
+                </span>
+                <div id="divSSJGHidelist" class="div_select_dropdown"></div>
+            </div>
+            <span class="span_fbxx" id="span_hide_fbxx">免费发布信息</span>
+        </div>
+    </div>
     @RenderSection("Section_Body", false)
 }
 @RenderBody()
