--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Head.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Head.css
@@ -20,7 +20,6 @@
 .div_head_right .span_fbxx {width: 180px;font-family: "微软雅黑";border: 1px solid #bc6ba6;height: 40px;background: #bc6ba6;float: left;display: inline-block;color: #fff;font-size: 16px;padding-top: 6px;text-align: center;cursor: pointer;margin-top: 10px;margin-left: 60px;}
 .div_head_right .span_fbxx:hover {background: #ad5b97;}
 
-
 /*首页_头部导航*/
 .div_head_nav {background-color: #ffffff;width: 1200px;height: 39px;}
 .div_head_nav .ul_head_nav {height: 39px;display: block;padding: 0;width: 100%;border-bottom: 2px solid #bc6ba6;}
@@ -28,9 +27,22 @@
 .div_head_nav .ul_head_nav .li_head_nav .span_head_nav {cursor: default;}
 .div_head_nav .ul_head_nav .li_head_nav .i_head_nav {background-image: url(images/head_nav_down.png);display: inline-block;width: 14px;height: 14px;margin-left: 5px;}
 
-
 /*搜索结果下拉框*/
 .div_select_dropdown {top:-10px; border-top:none; width: 499px;height:320px; position: relative;z-index: 1001;display:none;}
 .ul_select {width:499px;background-color:#ffffff;text-align: center;display: inline-block;border: 1px solid #bc6ba6;border-top:none;padding-left: 0px;height: 341px;}
 .li_select {height: 34px;text-align: left;width: 497px;display: block;padding-left: 6px;line-height: 34px;font-size: 16px;cursor: pointer;color: #999999;background: #FFFFFF;}
 .li_select:hover {background: #ececec;color: #333333;}
+
+/*首页_隐藏头部*/
+.div_head_hide{ width: 100%;height: 50px;background-color: #ad5b97;position: fixed;top: 0;opacity: 0.9;display: none;}
+.div_head_hide .img_head_hide_logo{ width: 80px;height: 40px;font-size: 26px;font-weight: 700;color: #ffffff;margin-left: 140px;}
+.div_head_hide .div_head_hide_left {float: left;width: 25%;margin-top: 4px;}
+.div_head_hide .div_head_hide_right {float: left;width: 75%;margin-top: 4px;}
+.div_head_hide_right .div_head_hide_right_ss {display: inline-block;width: 600px;height: auto;float: left;}
+.div_head_hide_right .div_head_hide_right_ss .span_spaninput_out {border: none;display: block;width: 630px;height: 40px;font-size: 14px;}
+.div_head_hide_right .div_head_hide_right_ss .span_spaninput_out .span_spaninput_in {border: 2px solid #fff;display: inline-block;width: 500px;height: 40px;font-size: 14px;padding: 6px 12px;}
+.div_head_hide_right .div_head_hide_right_ss .span_head_hide_right_ss {font-size: 14px;color: #999;cursor: pointer;margin-left: 4px;}
+.div_head_hide_right .div_head_hide_right_ss .span_head_hide_right_ss:hover {color: #ad5b97;text-decoration: underline;}
+.div_head_hide_right .div_head_hide_right_ss .span_head_hide_right_ss_split{ color: #999999;margin: 0 7px;}
+.div_head_hide_right .div_head_hide_right_ss .span_spaninput_out .span_ss {width: 130px;font-family: "微软雅黑";height: 40px;background: #bc6ba6;float: right;display: inline-block;color: #fff;font-size: 18px;font-weight: 700;padding: 6px 46px;cursor: pointer;border: 1px solid #fff;}
+.div_head_hide_right .span_fbxx {width: 180px;font-family: "微软雅黑";border: 1px solid #fff;height: 40px;background: #fff;color: #bc6ba6; float: left;display: inline-block;font-size: 16px;padding-top: 6px;text-align: center;cursor: pointer;margin-left: 90px;}
