--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/SY.cshtml
@@ -75,13 +75,13 @@
         <div class="div_head_hide_right">
             <div class="div_head_hide_right_ss">
                 <span id="spanHideXSLC" class="span_spaninput_out SRK">
-                    <input id="SSHide" class="span_spaninput_in" type="text" placeholder="搜索 房子/车子/工作/服务" />
+                    <input id="HideSS" class="span_spaninput_in" type="text" placeholder="搜索 房子/车子/工作/服务" />
                     <input type="hidden" id="HideLBID" />
                     <input type="hidden" id="HideURL" />
                     <input type="hidden" id="HideCONDITION" />
                     <span id="span_hide_ss" class="span_ss">搜索</span>
                 </span>
-                <div id="divSSJGHidelist" class="div_select_dropdown"></div>
+                <div id="divHideSSJGlist" class="div_select_dropdown" style="top: 0;"></div>
             </div>
             <span class="span_fbxx" id="span_hide_fbxx">免费发布信息</span>
         </div>
