--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/SY.cshtml
@@ -81,7 +81,7 @@
                     <input type="hidden" id="HideCONDITION" />
                     <span id="span_hide_ss" class="span_ss">搜索</span>
                 </span>
-                <div id="divHideSSJGlist" class="div_select_dropdown" style="top: 0;"></div>
+                <div id="divHideSSJGlist" class="div_select_dropdown" style="top: 0; border-top: 1px solid #bc6ba6"></div>
             </div>
             <span class="span_fbxx" id="span_hide_fbxx">免费发布信息</span>
         </div>
